[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = {path = "../infrastructure/"}
domain = {path = "../domain/"}
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
