[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "2.0.0"
bcrypt = "0.15.0"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
openssl = "0.10.55"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
domain = { path = "../domain/"}
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql", "migrate"] }
async-trait = "0.1.73"

