[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
application = {path = "../application/"}
domain = { path = "../domain/"}
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
dotenvy = "0.15.7"
garde = "0.14.0"
axum-macros = "0.3.8"
